# physical-ai-humanoid-robotics-book

./: .gitignore  .pre-commit-config.yaml  Instructions_for_running_backend_server.txt  README.md  vercel.json
.gemini/tmp/: question4.txt  question5.txt  report.txt
.specify/memory/: constitution.md
backend/: env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/src/: config.py  database.py  main.py  vector_db.py
backend/src/api/: __init__.py  auth.py  main.py  rag.py  users.py
backend/src/models/: chapter_vector.py  rag_log.py  user_profile.py
backend/src/services/: auth_service.py  rag_service.py  vectorization_service.py
backend/src/utils/: logger.py  rag_update_job.py  resilience.py
frontend/: docusaurus.config.ts  sidebars.ts
frontend/docs/module-1/: chapter-1-1.md  chapter-1-2.md  chapter-1-3.md  chapter-1-4.md  chapter-1-5.md
frontend/docs/module-2/: chapter-2-1.md  chapter-2-2.md  chapter-2-3.md  chapter-2-4.md  chapter-2-5.md
frontend/docs/module-3/: chapter-3-1.md  chapter-3-2.md  chapter-3-3.md  chapter-3-4.md  chapter-3-5.md
frontend/docs/module-4/: chapter-4-1.md  chapter-4-2.md  chapter-4-3.md  chapter-4-4.md  chapter-4-5.md
frontend/docs/module-5/: chapter-5-1.md  chapter-5-2.md  chapter-5-3.md  chapter-5-4.md  chapter-5-5.md
frontend/src/components/: Auth.tsx  Chatbot.module.css  Chatbot.tsx
frontend/src/pages/: profile.tsx
specs/001-physical-ai-robotics-book/: analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+35 files in other folders)
