[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the Physical AI & Humanoid Robotics Book"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "alembic",
    "asyncpg",
    "sqlalchemy[asyncio]",
    "qdrant-client",
    "python-json-logger",
]
requires-python = ">=3.11"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
python = "3.11"